# huff

./: .gitignore  CMakeLists.txt  README.md
huff/: main.c
huff.xcodeproj/: project.pbxproj
include/: huff.h
include/huff/: huff.h  lsb.h  msb.h  read.h  rev.h
src/: huff.c
